syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

message Empty{}

message StatusReply {
  double amount = 1;
}

message ThrowRequest {
  uint64 user_id = 1;
  double amount = 2;
}

message ThrowReply {
  uint64 user_id = 1;
  double amount = 2;
  bool is_winner = 3;
}

message WinnerRecoard {
  uint64 user_id = 1;
  double amount = 2;
  google.protobuf.Timestamp win_at = 3;
}

message WinnerHistory {
  repeated WinnerRecoard recoreds = 1;
}


service JPService {
  rpc GetStatus (Empty) returns (StatusReply) {}
  rpc ThrowMoney (ThrowRequest) returns (ThrowReply) {}
  rpc Latest10Winner (Empty) returns (WinnerHistory) {}
  rpc Top10Winner(Empty) returns (WinnerHistory) {}
}
